# protein-models

./: .gitignore  README.md  eval.py  pyproject.toml  train.py
3D/: mds.py  visualize.py
data/: download_pdbs.py  get_pairwise_matrices.py
examples/: train_mlp_autoencoder.py
models/: __init__.py  architectures.py  base.py
tests/: test_data_loading.py
utils/: data_loading.py  experiment_tracker.py  training.py  transforms.py
